tests/paczka1/fuzzy1/85939602.err
Error in line 10: TmqLkM A911 50,0
Error in line 12: TmqLkM A622 50,3
Error in line 17: 8lgbnYI A622 356,8
Error in line 14: TmqLkM S61 18,8
Error in line 26: TmqLkM A911 23,5
Error in line 29: TmqLkM S61 53,8
Error in line 32: DwzhTkuVYy A600 45,2
